--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.projectKey={PROJECT_TITLE}
 sonar.projectName={PROJECT_NAME}
 sonar.projectVersion={PROJECT_VERSION}
 
-sonar.sources=.
+sonar.sources=./single-metric
 
 sonar.tsql.file.suffixes=sql,tsql
 sonar.plsql.file.suffixes=pks,pkb
